app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: application-cpu
  labels:
    app: application-cpu
spec:
  type: ClusterIP
  selector:
    app: application-cpu
  ports:
    - protocol: TCP
      name: http
      port: 80
      targetPort: 8080
